Move project baseline to JDK 17, modernize source, bump JUnit to 6.x
Raises java.version/maven.compiler.release from 11 to 17 (root pom and
example-project), and updates CircleCI/GitHub Actions to build with JDK 17
accordingly. Verified with a full mvn verify (unit + real Maven-CLI
integration tests) and against the example project.

Bumps junit-bom 5.14.4 -> 6.1.3, which was previously held back
specifically because JUnit 6 requires Java 17+ (now available). No test
code changes were needed - itf-jupiter-extension and the JUnit Jupiter
API surface we use carried over cleanly.

Modernizes the main sources now that JDK 17 language features are
available: pattern-matching instanceof in locationOf(), Stream.toList()
instead of collect(Collectors.toList()), String.formatted() instead of
String.format(), var for locals with obvious types (mirrored into the
unit test that constructs models directly), and dropped a genuinely
unreachable defensive check in loadPluginToBeFiltered (String.split never
returns an empty array) by working with the array directly instead of
wrapping it in a List just to call isEmpty()/size().

Left the deprecated org.codehaus.plexus.component.annotations.Component/
Requirement annotations as-is: migrating them to pure JSR-330 touches how
Maven's container discovers and overrides the default ModelProcessor at
runtime, which is a real behavioral risk best done as its own change, not
folded into this one.